--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>nigga balls</title>
 </head>
 <body>
-  <strong> ME PICA LA PIJA</strong>
-  <p> ME PICA LA PIJA </p> 
+
+  <div class="top_bar">
+    <header class="home_text">
+      <a href="/index.html">Autismo S.L</a>
+    </header>
+    <ul>
+      <li><a href="/about.html">About</a></li>
+      <li><a href="/proyects.html">Proyects</a></li>
+      <li><a href="/contact.html">Contact us</a></li>
+    </ul>
+  </div>
+
 </body>
 </html>
