added gif and main text

--- a/index.html
+++ b/index.html
@@ -10,14 +10,25 @@
 <body>
 
   <div class="top_bar">
+
     <header class="home_text">
       <a href="/index.html">Autismo S.L</a>
     </header>
+
     <ul>
       <li><a href="/about.html">About</a></li>
       <li><a href="/proyects.html">Proyects</a></li>
       <li><a href="/contact.html">Contact us</a></li>
     </ul>
+
+  </div>
+
+
+  <div class="gif+main_text">
+
+    <img class="gif" src="img/gif_autista.gif" alt="gif_autista">
+    <span class="main_text">Welcome.</span>
+
   </div>
 
 </body>
