first part of the html. Done

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </header>
 
     <ul>
-      <li><a href="/about.html">About</a></li>
+      <li><button id="about_us_btn">About us</button></li>
       <li><a href="/proyects.html">Proyects</a></li>
       <li><a href="/contact.html">Contact us</a></li>
     </ul>
-
+    
   </div>
 
 
