changes in index and style

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/jpg" href="img/autismo.jpg">
     <title>Autistic-Team</title>
 </head>
@@ -15,11 +16,13 @@
       <a href="/index.html">Autismo S.L</a>
     </header>
 
-    <ul>
-      <li><button id="about_us_btn">About us</button></li>
-      <li><a href="/proyects.html">Proyects</a></li>
-      <li><a href="/contact.html">Contact us</a></li>
-    </ul>
+    <nav class="navigation">
+      <ul>
+        <li><button id="about_us_btn">About us</button></li>
+        <li><a href="/proyects.html">Proyects</a></li>
+        <li><a href="/contact.html">Contact us</a></li>
+      </ul> 
+    </nav>
     
   </div>
 
