--- a/index.html
+++ b/index.html
@@ -9,30 +9,35 @@
     <title>Autistic-Team</title>
 </head>
 <body>
-
-  <div class="top_bar">
-
-    <header class="home_text">
-      <a href="/index.html">Autismo S.L</a>
+    <header>
+        <!--
+            EN CASO DE QUE QUERAIS PONER UNA IMAGEN DE LOGO REEMPLAZANDO EL TEXTO.
+            <a class="logo" href="/"><img src="imagenes/logo.svg" alt=""></a>-->
+        <p class="logo">Autistic-Team</p>
+        <nav>
+            <ul class="nav__links">
+                <li><a href="">Sobre nosotros</a></li>
+                <!--<li><a href="#">Contactar</a></li>-->
+                <li><a href="">Mision/Vision</a></li>
+            </ul>
+        </nav>
+        <a class="cta" href="">Contactar</a>
+        <p class="menu cta">Menu</p>
     </header>
+    <div class="overlay">
+        <a class="close">&times;</a>
+        <div class="overlay__content">
+            <a href="">Sobre nosotros</a>
+            <a href="">Contactar</a>
+            <a href="">Mision/Vision</a>
+        </div>
+    </div>
 
-    <nav class="navigation">
-      <ul>
-        <li><button id="about_us_btn">About us</button></li>
-        <li><a href="/proyects.html">Proyects</a></li>
-        <li><a href="/contact.html">Contact us</a></li>
-      </ul> 
-    </nav>
-    
-  </div>
+<h2>
+    Welcome (test)
+</h2>
 
 
-  <div class="gif+main_text">
-
-    <img class="gif" src="img/gif_autista.gif" alt="gif_autista">
-    <span class="main_text">Welcome.</span>
-
-  </div>
 
 </body>
 </html>
