--- a/index.html
+++ b/index.html
@@ -9,34 +9,23 @@
     <title>Autistic-Team</title>
 </head>
 <body>
-    <header>
-        <!--
-            EN CASO DE QUE QUERAIS PONER UNA IMAGEN DE LOGO REEMPLAZANDO EL TEXTO.
-            <a class="logo" href="/"><img src="imagenes/logo.svg" alt=""></a>-->
-        <p class="logo">Autistic-Team</p>
-        <nav>
-            <ul class="nav__links">
-                <li><a href="">Sobre nosotros</a></li>
-                <!--<li><a href="#">Contactar</a></li>-->
-                <li><a href="">Mision/Vision</a></li>
-            </ul>
-        </nav>
-        <a class="cta" href="">Contactar</a>
-        <p class="menu cta">Menu</p>
-    </header>
-    <div class="overlay">
-        <a class="close">&times;</a>
-        <div class="overlay__content">
-            <a href="">Sobre nosotros</a>
-            <a href="">Contactar</a>
-            <a href="">Mision/Vision</a>
-        </div>
-    </div>
+  
+  <header>
 
-<h2>
-    Welcome (test)
-</h2>
 
+    <h1 class="w_txt">Welcome (test)</h1>
+    <nav>
+
+      <ul class="lista">
+        <li class="a"><a href="">Sobre nosotros</a></li>
+        <li class="b"><a href="">Mision/Vision</a></li>
+        <li class="c"><button id="contact_btn">Contactanos</button></li>
+      </ul>
+
+    </nav>
+    
+
+  </header>
 
 
 </body>
