more css added, header h1 tag has to be changed to an <a> tag

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <header>
 
 
-    <h1 class="w_txt">Welcome (test)</h1>
+    <h1 class="w_txt">Autistic-Team</h1>
     <nav>
 
       <ul class="lista">
         <li class="a"><a href="">Sobre nosotros</a></li>
         <li class="b"><a href="">Mision/Vision</a></li>
-        <li class="c"><button id="contact_btn">Contactanos</button></li>
+        <li class="c"><button id="contact_btn"><span>Contactanos</span></button></li>
       </ul>
 
     </nav>
