--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
       <ul class="nav">
         <li class="nav_home"><a href="">Autistic-Team</a></li>
-        <li id="nav_item_1" class="nav_item"><a href="">Proyects</a></li>
+        <li id="nav_item_1" class="nav_item"><a href="">Projects</a></li>
         <li id="nav_item_2" class="nav_item"><a href="">Mission/Vision</a></li>
         <li class="nav_abt_btn"><button id="abt_btn">About us</button></li>
       </ul>
@@ -38,6 +38,14 @@
       test test test test test test test test test test test test test 
       test test test test test test test test test test test test test </p>
       <button class="modal_btn_close" id="modal_btn_close">Close</button>
+    </div> 
+
+  </div>
+
+  <div class="team_text">
+
+    <div class="team_text_content">
+      <p class="team_text_text" id="team_text">We're <span id="team_text_typew"></span> </p> 
     </div> 
 
   </div>
