--- a/index.html
+++ b/index.html
@@ -28,15 +28,11 @@
   <div class="about_modal" id="abt_modal">
 
     <div class="about_modal_content">
-      <h1>HEADER (TEST)</h1>
-      <p>test test test test test test test test test test test test test 
-      test test test test test test test test test test test test test 
-      test test test test test test test test test test test test test
-      test test test test test test test test test test test test test 
-      test test test test test test test test test test test test test 
-      test test test test test test test test test test test test test 
-      test test test test test test test test test test test test test 
-      test test test test test test test test test test test test test </p>
+      <h1>ABOUT USS</h1>
+      <p>The Autistic-Team is a team of autistic developers who love web and app
+      development. Our goal is to show people that Autism is not a barrier and
+      Austistic people are capable of everything. Follow us on github to keep up
+      with us!</p>
       <button class="modal_btn_close" id="modal_btn_close">Close</button>
     </div> 
 
