--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="about_modal" id="abt_modal">
 
     <div class="about_modal_content">
-      <h1>ABOUT USS</h1>
+      <h1>ABOUT US</h1>
       <p>The Autistic-Team is a team of autistic developers who love web and app
       development. Our goal is to show people that Autism is not a barrier and
       Austistic people are capable of everything. Follow us on github to keep up
