--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
   </div>
 
+  <div class="bg_gif"></div>
   <div class="team_text">
 
     <div class="team_text_content">
@@ -45,7 +46,6 @@
     </div> 
 
   </div>
-
 
 </body>
 </html>
