Nav bAr nuevo en otra carpeta

--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/jpg" href="img/autismo.jpg">
+    <script src="main.js"></script>
     <title>Autistic-Team</title>
 </head>
 <body>
     <header>
-        <!--
-            EN CASO DE QUE QUERAIS PONER UNA IMAGEN DE LOGO REEMPLAZANDO EL TEXTO.
-            <a class="logo" href="/"><img src="imagenes/logo.svg" alt=""></a>-->
+        
         <p class="logo">Autistic-Team</p>
         <nav>
             <ul class="nav__links">
