creo que ya estaría

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
     <link rel="icon" type="image/jpg" href="img/autismo.jpg">
-<<<<<<< HEAD
+
     <script src="main.js"></script>
     <title>Autistic-Team</title>
-=======
+
     <title>autistic-team</title>
->>>>>>> a531c597f1dfac56c63ff81c9e0fce43119d4990
+
 </head>
 
 <body>
-<<<<<<< HEAD
+
     <header>
-        
+
         <p class="logo">Autistic-Team</p>
         <nav>
             <ul class="nav__links">
@@ -42,8 +42,8 @@
 <h2>
     Welcome (test)
 </h2>
-=======
-  
+
+
   <div class="nav_bar">
 
     <nav>
@@ -53,8 +53,8 @@
         <li id="nav_item_2" class="nav_item"><a href="">Mission/Vision</a></li>
         <li class="nav_abt_btn"><button id="abt_btn">About us</button></li>
       </ul>
-    </nav>  
-    
+    </nav>
+
   </div>
 
   <div class="about_modal" id="abt_modal">
@@ -66,17 +66,17 @@
       Austistic people are capable of everything. Follow us on github to keep up
       with us!</p>
       <button class="modal_btn_close" id="modal_btn_close">Close</button>
-    </div> 
+    </div>
 
   </div>
 
   <div class="bg_gif"></div>
   <div class="team_text">
->>>>>>> a531c597f1dfac56c63ff81c9e0fce43119d4990
+
 
     <div class="team_text_content">
-      <p class="team_text_text" id="team_text">We're <span id="team_text_typew"></span> </p> 
-    </div> 
+      <p class="team_text_text" id="team_text">We're <span id="team_text_typew"></span> </p>
+    </div>
 
   </div>
 
