el navbar hecho por mí está agregado

--- a/NavBar Nuevo./index.html
+++ b/NavBar Nuevo./index.html
@@ -18,7 +18,7 @@
           <li class="active"><a href="#">Home</a></li>
           <li class="navbar-dropdown">
             <a href="#" class="dropdown-toggler" data-dropdown="my-dropdown-id">
-              Categories
+              Cosa11111
             </a>
             <ul class="dropdown" id="my-dropdown-id">
               <li><a href="#">Actions</a></li>
@@ -31,18 +31,18 @@
           </li>
           <li class="navbar-dropdown">
             <a href="#" data-dropdown="blog">
-              Blog <i ></i>
+              Cosa2222 <i ></i>
             </a>
             <ul class="dropdown" id="blog">
-              <li><a href="#">Some category</a></li>
-              <li><a href="#">Some another category</a></li>
+              <li><a href="#">Todas putas</a></li>
+              <li><a href="#">Todas son muy putas</a></li>
               <li class="separator"></li>
-              <li><a href="#">Seprated link</a></li>
+              <li><a href="#">Demasiado putas</a></li>
               <li class="separator"></li>
-              <li><a href="#">One more seprated link.</a></li>
+              <li><a href="#">Increíblemente putas</a></li>
             </ul>
           </li>
-          <li><a href="#">About</a></li>
+          <li><a href="#">Sobre nosotros</a></li>
         </ul>
       </div>
     </div>
