--- a/NavBar Nuevo./index.html
+++ b/NavBar Nuevo./index.html
@@ -21,12 +21,12 @@
               Cosa11111
             </a>
             <ul class="dropdown" id="my-dropdown-id">
-              <li><a href="#">Actions</a></li>
-              <li><a href="#">Something else here</a></li>
+              <li><a href="#">Tetas</a></li>
+              <li><a href="#">No sé qué poner</a></li>
               <li class="separator"></li>
-              <li><a href="#">Seprated link</a></li>
+              <li><a href="#">Otro link</a></li>
               <li class="separator"></li>
-              <li><a href="#">One more seprated link.</a></li>
+              <li><a href="#">Buenas tardes</a></li>
             </ul>
           </li>
           <li class="navbar-dropdown">
