nav bar changed

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -7,54 +7,23 @@
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
     <link rel="icon" type="image/jpg" href="img/autismo.jpg">
-
-    <script src="main.js"></script>
-    <title>Autistic-Team</title>
-
     <title>autistic-team</title>
-
 </head>
 
 <body>
-
-    <header>
-
-        <p class="logo">Autistic-Team</p>
-        <nav>
-            <ul class="nav__links">
-                <li><a href="">Sobre nosotros</a></li>
-                <!--<li><a href="#">Contactar</a></li>-->
-                <li><a href="">Mision/Vision</a></li>
-            </ul>
-        </nav>
-        <a class="cta" href="">Contactar</a>
-        <p class="menu cta">Menu</p>
-    </header>
-    <div class="overlay">
-        <a class="close">&times;</a>
-        <div class="overlay__content">
-            <a href="">Sobre nosotros</a>
-            <a href="">Contactar</a>
-            <a href="">Mision/Vision</a>
-        </div>
-    </div>
-
-<h2>
-    Welcome (test)
-</h2>
-
-
+  
   <div class="nav_bar">
 
     <nav>
       <ul class="nav">
-        <li class="nav_home"><a href="">Autistic-Team</a></li>
+        <li class="nav_home"><a href="">Autistic<span>Team</span></a></li>
         <li id="nav_item_1" class="nav_item"><a href="">Projects</a></li>
         <li id="nav_item_2" class="nav_item"><a href="">Mission/Vision</a></li>
+        <li id="nav_item_3" class="nav_item"><a href="">Philosophy</a></li>
         <li class="nav_abt_btn"><button id="abt_btn">About us</button></li>
       </ul>
-    </nav>
-
+    </nav>  
+    
   </div>
 
   <div class="about_modal" id="abt_modal">
@@ -66,17 +35,16 @@
       Austistic people are capable of everything. Follow us on github to keep up
       with us!</p>
       <button class="modal_btn_close" id="modal_btn_close">Close</button>
-    </div>
+    </div> 
 
   </div>
 
   <div class="bg_gif"></div>
   <div class="team_text">
 
-
     <div class="team_text_content">
-      <p class="team_text_text" id="team_text">We're <span id="team_text_typew"></span> </p>
-    </div>
+      <p class="team_text_text" id="team_text">We're <span id="team_text_typew"></span> </p> 
+    </div> 
 
   </div>
 
